Fixing tab label alignment

--- a/www/assets/styles/sass/app/_app.sass
+++ b/www/assets/styles/sass/app/_app.sass
@@ -364,6 +364,10 @@
 
 .tab-labels
   +cf
+  // -webkit-display: flex
+  // display: flex
+  // justify-content: center
+  // resize: vertical
   color: #fff
   padding: 0
   margin: 0
@@ -377,12 +381,18 @@
   li
     float: left
     display: inline-block
+    // -webkit-display: flex
+    // display: flex
+    align-items: center
+    justify-content: center
     background: $color-darkgray
     width: percentage(1/3)
     line-height: 22px
     cursor: pointer
+    // min-height: 22px
     // border: 1px solid $color-black
     +mq-min-medium
+      // min-height: 25px
       line-height: 25px
 
     &:first-child
