--- a/www/assets/styles/sass/modules/_responsive-grid.sass
+++ b/www/assets/styles/sass/modules/_responsive-grid.sass
@@ -23,9 +23,6 @@
           float: left
           width: 60%
 
-        .break
-          display: block
-
     +mq-min-large
       padding-top: 11px
 
@@ -36,3 +33,7 @@
       float: left
     +mq-min-large
       padding-right: 28px
+
+.break
+  +mq-min-medium
+    display: block 
